wk_taa_taaqa/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ACRO__c</fullName>
        <label>ACRO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Product_Category__c</fullName>
        <description>Stores the AMS product category information</description>
        <label>AMS Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Data</fullName>
                </value>
                <value>
                    <fullName>Active Data Professional &amp; Client Services</fullName>
                </value>
                <value>
                    <fullName>Active Data Software</fullName>
                </value>
                <value>
                    <fullName>Additional CDs (3D)</fullName>
                </value>
                <value>
                    <fullName>Annual Fee</fullName>
                </value>
                <value>
                    <fullName>Archival Tax Software</fullName>
                </value>
                <value>
                    <fullName>Audit Professional &amp; Client Services</fullName>
                </value>
                <value>
                    <fullName>Autoflow Professional &amp; Client Services</fullName>
                </value>
                <value>
                    <fullName>Autoflow Software</fullName>
                </value>
                <value>
                    <fullName>CCH Academy</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax 1000 Package with Document and Portal</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax 1000 Package with Document and Scan</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax 500 Package with Document and Portal</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax 500 Package with Document and Scan</fullName>
                </value>
                <value>
                    <fullName>CCH Portal Software</fullName>
                </value>
                <value>
                    <fullName>Client Accounting Suite Premier Software</fullName>
                </value>
                <value>
                    <fullName>Client Accounting Suite Premier Training</fullName>
                </value>
                <value>
                    <fullName>Client Intelligence Consulting</fullName>
                </value>
                <value>
                    <fullName>Client Intelligence Software</fullName>
                </value>
                <value>
                    <fullName>Client Intelligence Training</fullName>
                </value>
                <value>
                    <fullName>Client Link Software</fullName>
                </value>
                <value>
                    <fullName>Comtax Software</fullName>
                </value>
                <value>
                    <fullName>Comtax Training</fullName>
                </value>
                <value>
                    <fullName>Conversion Software</fullName>
                </value>
                <value>
                    <fullName>Customized Letterhead (1A)</fullName>
                </value>
                <value>
                    <fullName>Data Axcess Utility</fullName>
                </value>
                <value>
                    <fullName>Document Consulting</fullName>
                </value>
                <value>
                    <fullName>Document Professional &amp; Client Services</fullName>
                </value>
                <value>
                    <fullName>Document Software</fullName>
                </value>
                <value>
                    <fullName>eLearning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aptps_Product_Image__c</fullName>
        <label>Product Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Aptps_Sales_term__c</fullName>
        <label>Sales term</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aptps_Upload_Image__c</fullName>
        <formula>IF (Name&lt;&gt;&quot;&quot;, HYPERLINK(&quot;/apex/SelectField?id=&quot;&amp;Id&amp;&quot;&amp;obj=Product2&quot;, IMAGE(&quot;/resource/Button_UploadImage&quot;, 
&quot;Upload Image&quot;),&quot;_self&quot;), NULL)</formula>
        <label>Upload Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BundleInvoiceLevel__c</fullName>
        <description>The invoice level associated with the bundle</description>
        <inlineHelpText>The invoice level associated with the bundle</inlineHelpText>
        <label>Bundle Invoice Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Customizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product must be configured during selection.</description>
        <label>Must Configure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DiscontinuedDate__c</fullName>
        <description>The date when the product is pulled out and rendered unavailable for sale on the store</description>
        <inlineHelpText>The date when the product is pulled out and rendered unavailable for sale on the store</inlineHelpText>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveStartDate__c</fullName>
        <description>The start date of the product in a store</description>
        <inlineHelpText>The start date of the product in a store</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExcludeFromSitemap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product is listed for indexing by search engines.</description>
        <inlineHelpText>Indicates whether the product is listed for indexing by search engines.</inlineHelpText>
        <label>Exclude From Sitemap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasSearchAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true the product can be considered as base product for searching related products</description>
        <label>Has Search Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconId__c</fullName>
        <description>The attachment object ID of the uploaded icon image file.</description>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconSize__c</fullName>
        <description>The actual size of the icon.</description>
        <inlineHelpText>The actual size of the icon.</inlineHelpText>
        <label>Actual Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Icon__c</fullName>
        <description>Displays the icon uploaded using the icon button.</description>
        <formula>HYPERLINK( &quot;/apex/Apttus_Config2__IconUploader?productId=&quot;+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE(&quot;/resource/Apttus_Config2__Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Apttus_Config2__IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LaunchDate__c</fullName>
        <description>The date when the product is launched for selling.</description>
        <inlineHelpText>The date when the product is launched for selling.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The default unit of measure for the product</description>
        <label>Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Version__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>Version</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banded_Discount__c</fullName>
        <label>Banded Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concurrent_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concurrent Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cyclical_vs_Non_Cyclical__c</fullName>
        <label>Cyclical vs Non Cyclical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cyclical</fullName>
                </value>
                <value>
                    <fullName>Non Cyclical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Everest_Summary__c</fullName>
        <label>Everest Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>Complete Tax</fullName>
                </value>
                <value>
                    <fullName>CORE/ARM</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Non-Tax Maintenance &amp; SaaS</fullName>
                </value>
                <value>
                    <fullName>STG</fullName>
                </value>
                <value>
                    <fullName>Tax (including Tax SaaS)</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other - Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId_P__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId_P</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEAC_1__c</fullName>
        <label>GEAC 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Licensing</fullName>
                </value>
                <value>
                    <fullName>Total Maintenance</fullName>
                </value>
                <value>
                    <fullName>Total SaaS</fullName>
                </value>
                <value>
                    <fullName>Total Training</fullName>
                </value>
                <value>
                    <fullName>Total Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEAC_2__c</fullName>
        <label>GEAC 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Data - Licensing</fullName>
                </value>
                <value>
                    <fullName>Active Data - Maintenance</fullName>
                </value>
                <value>
                    <fullName>Active Data - Training</fullName>
                </value>
                <value>
                    <fullName>All other - Other</fullName>
                </value>
                <value>
                    <fullName>CCH University - Training</fullName>
                </value>
                <value>
                    <fullName>Client Intelligent - Licensing</fullName>
                </value>
                <value>
                    <fullName>Client WU - Maintenance</fullName>
                </value>
                <value>
                    <fullName>Complete Tax - Other</fullName>
                </value>
                <value>
                    <fullName>ComTax - Maintenance</fullName>
                </value>
                <value>
                    <fullName>Conferences - Training</fullName>
                </value>
                <value>
                    <fullName>Coolbar - Licensing</fullName>
                </value>
                <value>
                    <fullName>Coolbar - Maintenanc</fullName>
                </value>
                <value>
                    <fullName>CPAS-Mgmt - Licensing</fullName>
                </value>
                <value>
                    <fullName>CPAS-Mgmt - Maintenance</fullName>
                </value>
                <value>
                    <fullName>CPAS Mgr - Licensing</fullName>
                </value>
                <value>
                    <fullName>CPAS Mgr - Maintenance</fullName>
                </value>
                <value>
                    <fullName>CPAS Shipping - Other</fullName>
                </value>
                <value>
                    <fullName>CPAS - Training</fullName>
                </value>
                <value>
                    <fullName>Document - Licensing</fullName>
                </value>
                <value>
                    <fullName>Document - Maintenance</fullName>
                </value>
                <value>
                    <fullName>Document - SaaS</fullName>
                </value>
                <value>
                    <fullName>Document - Training</fullName>
                </value>
                <value>
                    <fullName>ELF - Other</fullName>
                </value>
                <value>
                    <fullName>Engagement - Licensing</fullName>
                </value>
                <value>
                    <fullName>Engagement - Maintenance</fullName>
                </value>
                <value>
                    <fullName>Engagement Shipping - Other</fullName>
                </value>
                <value>
                    <fullName>Engagement - Training</fullName>
                </value>
                <value>
                    <fullName>Finance Fee Revenue - Other</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset - Licensing</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset - Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Included_Products__c</fullName>
        <label>Included Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Axcess_Implementation_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Axcess Implementation Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mobile_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mobile Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sales_Tax_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sales Tax Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAN__c</fullName>
        <label>LAN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>46</fullName>
                </value>
                <value>
                    <fullName>47</fullName>
                </value>
                <value>
                    <fullName>49</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>66</fullName>
                </value>
                <value>
                    <fullName>67</fullName>
                </value>
                <value>
                    <fullName>94</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Year_Price__c</fullName>
        <label>Last Year Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <label>Marketing Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Pricing_Group__c</fullName>
        <label>Material Pricing Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Format__c</fullName>
        <label>Media Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Binder (BR)</fullName>
                </value>
                <value>
                    <fullName>BOM Header (BM)</fullName>
                </value>
                <value>
                    <fullName>Bound book (BB)</fullName>
                </value>
                <value>
                    <fullName>Case (CA)</fullName>
                </value>
                <value>
                    <fullName>CD-Rom (CD)</fullName>
                </value>
                <value>
                    <fullName>Consulting sess (CS)</fullName>
                </value>
                <value>
                    <fullName>Electronic Prod (EL)</fullName>
                </value>
                <value>
                    <fullName>Journal (editio (JI)</fullName>
                </value>
                <value>
                    <fullName>Journal (JO)</fullName>
                </value>
                <value>
                    <fullName>Loose leaf (LL)</fullName>
                </value>
                <value>
                    <fullName>Magazine (MG)</fullName>
                </value>
                <value>
                    <fullName>Module on CD (CC)</fullName>
                </value>
                <value>
                    <fullName>Newsletter (edi (NI)</fullName>
                </value>
                <value>
                    <fullName>Newsletter (NL)</fullName>
                </value>
                <value>
                    <fullName>Online content (OL)</fullName>
                </value>
                <value>
                    <fullName>Other (DV)</fullName>
                </value>
                <value>
                    <fullName>Seminar session (SS)</fullName>
                </value>
                <value>
                    <fullName>Services (SP)</fullName>
                </value>
                <value>
                    <fullName>Services (SV)</fullName>
                </value>
                <value>
                    <fullName>Software offlin (ES)</fullName>
                </value>
                <value>
                    <fullName>Software online (OS)</fullName>
                </value>
                <value>
                    <fullName>Training session (TS)</fullName>
                </value>
                <value>
                    <fullName>Yearbook (YB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Listed_Products_Column_3__c</fullName>
        <formula>&apos;Special Instructions: &apos; + Special_Instructions__c + BR() + &apos;ACRO       : &apos; + ACRO__c + BR() + &apos;PAC Code : &apos; + text(PAC_Code__c)</formula>
        <label>My Listed Products Column 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Listed_Products_Desc__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PAC_Code__c</fullName>
        <label>PAC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BCN</fullName>
                </value>
                <value>
                    <fullName>BCR</fullName>
                </value>
                <value>
                    <fullName>BGB</fullName>
                </value>
                <value>
                    <fullName>BNH</fullName>
                </value>
                <value>
                    <fullName>BRN</fullName>
                </value>
                <value>
                    <fullName>FAB</fullName>
                </value>
                <value>
                    <fullName>FSS</fullName>
                </value>
                <value>
                    <fullName>LSS</fullName>
                </value>
                <value>
                    <fullName>TAI</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>TAT</fullName>
                </value>
                <value>
                    <fullName>TNS</fullName>
                </value>
                <value>
                    <fullName>TRM</fullName>
                </value>
                <value>
                    <fullName>TST</fullName>
                </value>
                <value>
                    <fullName>WSB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAC_Description__c</fullName>
        <label>PAC Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent2__c</fullName>
        <label>Parent2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Designation__c</fullName>
        <label>Pipeline Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCH Axcess</fullName>
                </value>
                <value>
                    <fullName>CCH Prosystem fx</fullName>
                </value>
                <value>
                    <fullName>CCH Other</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>iFirm</fullName>
                </value>
                <value>
                    <fullName>CPE Link</fullName>
                </value>
                <value>
                    <fullName>TaxWise</fullName>
                </value>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>PaperlessPlus</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>CASP</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>